Create an event

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for :event, url: events_path do |f| %>
   <p>
     <%= f.label :number %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :number %>
   </p>
 
   <p>
