--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,20 @@
 <h1>New Event</h1>
 
 <%= form_for :event, url: events_path do |f| %>
+  <% if @event.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@event.errors.count, "error") %> prohibited
+        this event from being saved:
+      </h2>
+      <ul>
+        <% @event.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= f.label :number %><br>
     <%= f.text_field :number %>
@@ -15,3 +29,5 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+<%= link_to 'Back', events_path %>
