--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,4 +8,32 @@
   <%= @event.text %>
 </p>
 
+<h2>Comments</h2>
+<% @event.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.guess %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@event, @event.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :guess %><br>
+    <%= f.text_field :guess %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
 <%= link_to 'Back', events_path %>
