--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<center>
+  <h1>Welcome to Odds</h1>
+  <p> Either you or your friend suggests a dare and you want them to do it.  This happens by making them lose 'odds'. </p>
 
-<%= link_to 'My Blog', controller: 'events' %>
-<%= link_to 'New article', new_event_path %>
+  <p> For example, if I said, "Hey, odds you go jump over that fence?" He would then give a number, for example "20". </p>
+
+  <p>On the count of 3, we would both say a number between 1 and 20 at the same time, and if it's the same number he has to do it. </p>
+
+  <p> The person receiving the odds is the one who decides what number to pick from. </p>
+
+  <h2>Click the link to start:</h2>
+  <%= link_to 'New odds', new_event_path %>
+</center>
