--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Event</h1>
+<h1>New Odds</h1>
+
+<p>Only one person needs to fill out this form.  Pick a number and fill it in, and also a reason to fill in the "why" box.  Then click "Save Event".</p>
 
 <%= form_for :event, url: events_path do |f| %>
   <% if @event.errors.any? %>
@@ -30,4 +32,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', events_path %>
+<%= link_to 'Back', controller: :welcome, action: :index %>
